--- a/24.md
+++ b/24.md
@@ -1,1 +1,279 @@
+# Building Elastic Kubernetes Service (EKS) With Terraform #
+
+In thiw project, we will use Terraform to create a Kubernetes EKS cluster and dynamically add scalable worker nodes,  deploy multiple applications using HELM, experience more kubernetes objects and how to use them with Helm. Such as Dynamic provisioning of volumes to make pods stateful.
+
+# Building EKS with Terraform #
+
+Open up a new directory on your laptop, and name it eks
+
+Use AWS CLI to create an S3 bucket to store the terraform state: `aws s3 mb s3://opeyemi-eks-bucket-backend-terraform`
+
+Create a file – backend.tf
+
+```
+terraform {
+  backend "s3" {
+    bucket = "opeyemi-eks-bucket-backend-terraform"
+    key    = "terraform.tfstate"
+    region = "us-east-1"
+  }
+}
+```
+
+![1 backend tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/c71c6455-7098-4b0f-9ac1-1ee1ff6619fa)
+
+Create a provider.tf file
+
+![2 provider tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/5e6ec507-ea90-405f-bbf3-2ddb8cb7ae6c)
+
+Create a file – network.tf and provision Elastic IP for Nat Gateway.
+```
+# reserve Elastic IP to be used in our NAT gateway
+resource "aws_eip" "nat_gw_elastic_ip" {
+vpc = true
+
+tags = {
+Name            = "${var.cluster_name}-nat-eip"
+iac_environment = var.iac_environment_tag
+}
+}
+```
+
+ Create VPC, Private and public subnets using the official AWS module.
+
+```
+module "vpc" {
+source  = "terraform-aws-modules/vpc/aws"
+
+name = "${var.name_prefix}-vpc"
+cidr = var.main_network_block
+azs  = data.aws_availability_zones.available_azs.names
+
+private_subnets = [
+# this loop will create a one-line list as ["10.0.0.0/20", "10.0.16.0/20", "10.0.32.0/20", ...]
+# with a length depending on how many Zones are available
+for zone_id in data.aws_availability_zones.available_azs.zone_ids :
+cidrsubnet(var.main_network_block, var.subnet_prefix_extension, tonumber(substr(zone_id, length(zone_id) - 1, 1)) - 1)
+]
+
+public_subnets = [
+# this loop will create a one-line list as ["10.0.128.0/20", "10.0.144.0/20", "10.0.160.0/20", ...]
+# with a length depending on how many Zones are available
+# there is a zone Offset variable, to make sure no collisions are present with private subnet blocks
+for zone_id in data.aws_availability_zones.available_azs.zone_ids :
+cidrsubnet(var.main_network_block, var.subnet_prefix_extension, tonumber(substr(zone_id, length(zone_id) - 1, 1)) + var.zone_offset - 1)
+]
+
+# Enable single NAT Gateway to save some money
+# WARNING: this could create a single point of failure, since we are creating a NAT Gateway in one AZ only
+# feel free to change these options if you need to ensure full Availability without the need of running 'terraform apply'
+# reference: https://registry.terraform.io/modules/terraform-aws-modules/vpc/aws/2.44.0#nat-gateway-scenarios
+enable_nat_gateway     = true
+single_nat_gateway     = true
+one_nat_gateway_per_az = false
+enable_dns_hostnames   = true
+reuse_nat_ips          = true
+external_nat_ip_ids    = [aws_eip.nat_gw_elastic_ip.id]
+
+# Add VPC/Subnet tags required by EKS
+tags = {
+"kubernetes.io/cluster/${var.cluster_name}" = "shared"
+iac_environment                             = var.iac_environment_tag
+}
+public_subnet_tags = {
+"kubernetes.io/cluster/${var.cluster_name}" = "shared"
+"kubernetes.io/role/elb"                    = "1"
+iac_environment                             = var.iac_environment_tag
+}
+private_subnet_tags = {
+"kubernetes.io/cluster/${var.cluster_name}" = "shared"
+"kubernetes.io/role/internal-elb"           = "1"
+iac_environment                             = var.iac_environment_tag
+}
+}
+```
+![3 network tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/01bb3b05-707d-4867-b75e-ae206983c530)
+
+Note: The tags added to the subnets is very important. The Kubernetes Cloud Controller Manager (cloud-controller-manager) and AWS Load Balancer Controller (aws-load-balancer-controller) needs to identify the cluster’s. To do that, it querries the cluster’s subnets by using the tags as a filter.
+
+For public and private subnets that use load balancer resources: each subnet must be tagged
+
+```
+Key: kubernetes.io/cluster/cluster-name
+Value: shared
+```
+
+For private subnets that use internal load balancer resources: each subnet must be tagged
+
+```
+Key: kubernetes.io/role/internal-elb
+Value: 1
+```
+
+For public subnets that use internal load balancer resources: each subnet must be tagged
+
+```
+Key: kubernetes.io/role/elb
+Value: 1
+```
+
+Create a file – variables.tf
+
+```
+# create some variables
+variable "cluster_name" {
+type        = string
+description = "EKS cluster name."
+}
+variable "iac_environment_tag" {
+type        = string
+description = "AWS tag to indicate environment name of each infrastructure object."
+}
+variable "name_prefix" {
+type        = string
+description = "Prefix to be used on each infrastructure object Name created in AWS."
+}
+variable "main_network_block" {
+type        = string
+description = "Base CIDR block to be used in our VPC."
+}
+variable "subnet_prefix_extension" {
+type        = number
+description = "CIDR block bits extension to calculate CIDR blocks of each subnetwork."
+}
+variable "zone_offset" {
+type        = number
+description = "CIDR block bits extension offset to calculate Public subnets, avoiding collisions with Private subnets."
+}
+```
+
+![4 variable tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/677e46d2-7c1c-4985-9fdc-e14840ebf07e)
+
+Create a file – data.tf – This will pull the available AZs for use.
+
+```
+# get all available AZs in our region
+data "aws_availability_zones" "available_azs" {
+state = "available"
+}
+data "aws_caller_identity" "current" {} # used for accesing Account ID and ARN
+```
+
+![5 data tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/cffad859-6be6-40b9-8473-d8ef5d4bff5b)
+
+Create a file – eks.tf and provision EKS cluster
+
+```
+module "eks_cluster" {
+  source  = "terraform-aws-modules/eks/aws"
+  version = "~> 18.0"
+  cluster_name    = var.cluster_name
+  cluster_version = "1.22"
+  vpc_id     = module.vpc.vpc_id
+  subnet_ids = module.vpc.private_subnets
+  cluster_endpoint_private_access = true
+  cluster_endpoint_public_access = true
+
+  # Self Managed Node Group(s)
+  self_managed_node_group_defaults = {
+    instance_type                          = var.asg_instance_types[0]
+    update_launch_template_default_version = true
+  }
+  self_managed_node_groups = local.self_managed_node_groups
+
+  # aws-auth configmap
+  create_aws_auth_configmap = true
+  manage_aws_auth_configmap = true
+  aws_auth_users = concat(local.admin_user_map_users, local.developer_user_map_users)
+  tags = {
+    Environment = "prod"
+    Terraform   = "true"
+  }
+}
+```
+
+![6 eks tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/6b5c5fc5-72f8-427e-a129-7dad6fe26f16)
+
+Create a file – locals.tf to create local variables. Terraform does not allow assigning variable to variables. There is good reasons for that to avoid repeating your code unecessarily. So a terraform way to achieve this would be to use locals so that your code can be kept DRY
+
+```
+# render Admin & Developer users list with the structure required by EKS module
+locals {
+  admin_user_map_users = [
+    for admin_user in var.admin_users :
+    {
+      userarn  = "arn:aws:iam::${data.aws_caller_identity.current.account_id}:user/${admin_user}"
+      username = admin_user
+      groups   = ["system:masters"]
+    }
+  ]
+  developer_user_map_users = [
+    for developer_user in var.developer_users :
+    {
+      userarn  = "arn:aws:iam::${data.aws_caller_identity.current.account_id}:user/${developer_user}"
+      username = developer_user
+      groups   = ["${var.name_prefix}-developers"]
+    }
+  ]
+
+  self_managed_node_groups = {
+    worker_group1 = {
+      name = "${var.cluster_name}-wg"
+
+      min_size      = var.autoscaling_minimum_size_by_az * length(data.aws_availability_zones.available_azs.zone_ids)
+      desired_size      = var.autoscaling_minimum_size_by_az * length(data.aws_availability_zones.available_azs.zone_ids)
+      max_size  = var.autoscaling_maximum_size_by_az * length(data.aws_availability_zones.available_azs.zone_ids)
+      instance_type = var.asg_instance_types[0].instance_type
+
+      bootstrap_extra_args = "--kubelet-extra-args '--node-labels=node.kubernetes.io/lifecycle=spot'"
+
+      block_device_mappings = {
+        xvda = {
+          device_name = "/dev/xvda"
+          ebs = {
+            delete_on_termination = true
+            encrypted             = false
+            volume_size           = 10
+            volume_type           = "gp2"
+          }
+        }
+      }
+
+      use_mixed_instances_policy = true
+      mixed_instances_policy = {
+        instances_distribution = {
+          spot_instance_pools = 4
+        }
+
+        override = var.asg_instance_types
+      }
+    }
+  }
+}
+
+```
+
+![7 locals tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/fd1b8fb0-9a62-4249-aeb9-bc817d8bd6b6)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
