--- a/24.md
+++ b/24.md
@@ -255,6 +255,92 @@ locals {
 
 ![7 locals tf](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/fd1b8fb0-9a62-4249-aeb9-bc817d8bd6b6)
 
+Add more variables to the variables.tf file
+
+```
+# create some variables
+variable "admin_users" {
+  type        = list(string)
+  description = "List of Kubernetes admins."
+}
+variable "developer_users" {
+  type        = list(string)
+  description = "List of Kubernetes developers."
+}
+variable "asg_instance_types" {
+  description = "List of EC2 instance machine types to be used in EKS."
+}
+variable "autoscaling_minimum_size_by_az" {
+  type        = number
+  description = "Minimum number of EC2 instances to autoscale our EKS cluster on each AZ."
+}
+variable "autoscaling_maximum_size_by_az" {
+  type        = number
+  description = "Maximum number of EC2 instances to autoscale our EKS cluster on each AZ."
+}
+```
+
+![8  Add more variables to the variables tf file](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/0086b4aa-4422-4f84-a5ab-d11e54c32339)
+
+Create a file – variables.tfvars to set values for variables.
+
+```
+cluster_name            = "tooling-app-eks"
+iac_environment_tag     = "development"
+name_prefix             = "darey-io-eks"
+main_network_block      = "10.0.0.0/16"
+subnet_prefix_extension = 4
+zone_offset             = 8
+
+# Ensure that these users already exist in AWS IAM. Another approach is that you can introduce an iam.tf file to manage users separately, get the data source and interpolate their ARN.
+admin_users                              = ["dare", "solomon"]
+developer_users                          = ["leke", "david"]
+asg_instance_types                       = ["t3.small", "t2.small"]
+autoscaling_minimum_size_by_az           = 1
+autoscaling_maximum_size_by_az           = 10
+autoscaling_average_cpu                  = 30
+```
+![9  terraform  tfvars also known as variables tfvars](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/210a18c1-c934-4d9e-8b35-787afaa43aca)
+
+Run terraform init and  Run Terraform plan – Your plan should have an output
+
+![10 terraform init](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/9abedab0-2dff-4887-8c43-f0fc29bcd3ff)
+
+![11 terraform plan](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/ab72f622-5876-4236-a56a-166868fbadb8)
+
+Run Terraform apply
+
+This will begin to create cloud resources, and fail at some point with the error. That is because for us to connect to the cluster using the kubeconfig, Terraform needs to be able to connect and set the credentials correctly.
+
+```
+╷
+│ Error: Post "http://localhost/api/v1/namespaces/kube-system/configmaps": dial tcp [::1]:80: connect: connection refused
+│ 
+│   with module.eks-cluster.kubernetes_config_map.aws_auth[0],
+│   on .terraform/modules/eks-cluster/aws_auth.tf line 63, in resource "kubernetes_config_map" "aws_auth":
+│   63: resource "kubernetes_config_map" "aws_auth" {
+
+```
+
+![12a Run Terraform apply
+This will begin to create cloud resources, and fail at some point with the error](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/865347e0-aa70-4dc5-b209-c3176157401c)
+
+
+Let fix the problem in the next section.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
