--- a/24.md
+++ b/24.md
@@ -326,7 +326,134 @@ This will begin to create cloud resources, and fail at some point with the error
 This will begin to create cloud resources, and fail at some point with the error](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/865347e0-aa70-4dc5-b209-c3176157401c)
 
 
-Let fix the problem in the next section.
+To fix the problem append the data.tf and the provider.tf files
+
+Append the file data.tf
+
+```
+# get EKS cluster info to configure Kubernetes and Helm providers
+data "aws_eks_cluster" "cluster" {
+  name = module.eks_cluster.cluster_id
+}
+data "aws_eks_cluster_auth" "cluster" {
+  name = module.eks_cluster.cluster_id
+}
+```
+![13  append the  data tf file](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/96c326b0-ef4a-487a-b409-165c5bed2a37)
+
+Append the file provider.tf
+
+```
+# get EKS authentication for being able to manage k8s objects from terraform
+provider "kubernetes" {
+  host                   = data.aws_eks_cluster.cluster.endpoint
+  cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
+  token                  = data.aws_eks_cluster_auth.cluster.token
+}
+```
+
+![14  append the provider tf file](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/58f05c46-bec8-452e-a603-dde72c57ece2)
+
+Run the init and plan again – This time you will see 
+
+```
+ # module.eks-cluster.kubernetes_config_map.aws_auth[0] will be created
+  + resource "kubernetes_config_map" "aws_auth" {
+      + data = {
+          + "mapAccounts" = jsonencode([])
+          + "mapRoles"    = <<-EOT
+                - "groups":
+                  - "system:bootstrappers"
+                  - "system:nodes"
+                  "rolearn": "arn:aws:iam::696742900004:role/tooling-app-eks20210718113602300300000009"
+                  "username": "system:node:{{EC2PrivateDNSName}}"
+            EOT
+          + "mapUsers"    = <<-EOT
+                - "groups":
+                  - "system:masters"
+                  "userarn": "arn:aws:iam::696742900004:user/dare"
+                  "username": "dare"
+                - "groups":
+                  - "system:masters"
+                  "userarn": "arn:aws:iam::696742900004:user/solomon"
+                  "username": "solomon"
+                - "groups":
+                  - "darey-io-eks-developers"
+                  "userarn": "arn:aws:iam::696742900004:user/leke"
+                  "username": "leke"
+                - "groups":
+                  - "darey-io-eks-developers"
+                  "userarn": "arn:aws:iam::696742900004:user/david"
+                  "username": "david"
+            EOT
+        }
+      + id   = (known after apply)
+
+      + metadata {
+          + generation       = (known after apply)
+          + labels           = {
+              + "app.kubernetes.io/managed-by" = "Terraform"
+              + "terraform.io/module"          = "terraform-aws-modules.eks.aws"
+            }
+          + name             = "aws-auth"
+          + namespace        = "kube-system"
+          + resource_version = (known after apply)
+          + uid              = (known after apply)
+        }
+    }
+```
+
+![15  run init again](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/0bf98ef5-3b61-4ba5-9d65-d3f43d9b14cd)
+
+![16 display of the kubernetes resource under terraform plan](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/e87fd39c-6220-420c-b326-c1455e2dc4a5)
+
+Create kubeconfig file using awscli.
+
+`aws eks update-kubecofig --name tooling-app-eks --region us-east-1 --kubeconfig kubeconfig`
+
+![17 Create kubeconfig file using awscli 
+](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/af3ad014-3621-4ba2-8898-74a94a2f5698)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
