--- a/24.md
+++ b/24.md
@@ -415,15 +415,21 @@ Create kubeconfig file using awscli.
 ](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/af3ad014-3621-4ba2-8898-74a94a2f5698)
 
 
+# Installing Helm #
 
+Download the tar.gz file from the project’s Github release page. Or simply use wget to download version 3.6.3 directly `wget https://github.com/helm/helm/archive/refs/tags/v3.6.3.tar.gz`
 
+Unpack the tar.gz file `tar -zxvf v3.6.3.tar.gz `
 
+cd into the unpacked directory  `cd helm-3.6.3`
 
+Build the source code using make utility `make build`
 
+Helm binary will be in the bin folder. Simply move it to the bin directory on your system. `sudo mv bin/helm /usr/local/bin/`
 
+Check that Helm is installed
 
-
-
+![18  Confirm helm version](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/46488169-1b10-492c-b998-7f908a1f5ac6)
 
 
 
