--- a/24.md
+++ b/24.md
@@ -431,14 +431,15 @@ Check that Helm is installed
 
 ![18  Confirm helm version](https://github.com/opeyemiagbadero/24.-Building-Elastic-Kubernetes-Service-EKS-With-Terraform/assets/79456052/46488169-1b10-492c-b998-7f908a1f5ac6)
 
+# Deploy Jenkins with Helm #
 
+One of the amazing things about helm is the fact that you can deploy applications that are already packaged from a public helm repository directly with very minimal configuration. An example is Jenkins.
 
-
-
-
-
-
-
+- Visit Artifact Hub to find packaged applications as Helm Charts
+- Search for Jenkins
+- Add the repository to helm so that you can easily download and deploy `helm repo add jenkins https://charts.jenkins.io`
+- Update helm repo `helm repo update` 
+- Install the chart `helm install myjenkins  jenkins/jenkins --kubeconfig kubeconfig file`
 
 
 
